blackhole/cfg/longhorn/cilium-ingress-lh.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# The name will end up: cilium-ingress-longhorn for the svc
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod" # matches the name of the issuer in the NS
spec:
  ingressClassName: cilium
  rules:
    - host: lh-blackhole.srvrs.co
      http:
        paths:
        - backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
    - hosts:
      - lh-blackhole.srvrs.co
      secretName: lh-blackhole-srvrs-co-tls
